<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/ITSON_azul">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_menu"
        android:theme="@style/ButtonItson"
        android:drawableStart="@drawable/outline_restaurant_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="5dp"
        android:text="@string/ordenar" >

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_comprar"
        android:theme="@style/ButtonItson"
        android:drawableStart="@drawable/outline_shopping_cart_24"
        android:layout_below="@+id/btn_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/carrito" >

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cuenta"
        android:theme="@style/ButtonItson"
        android:drawableStart="@drawable/outline_account_circle_black_18dp"
        android:layout_below="@+id/btn_comprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/cuenta" >

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/TV_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btn_cuenta"
        android:text="@string/bienvenida"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/TV_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/TV_bienvenida"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

</RelativeLayout>